# cli-t

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.ps1  build-release.sh  config.toml  install.ps1  install.sh
.github/workflows/: release.yml
.orchids/: orchids.json
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
