[package]
name = "cli-t"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A minimal real-time CLI chat application"
repository = "https://github.com/Nuu-maan/cli-t"
homepage = "https://github.com/Nuu-maan/cli-t"
readme = "../README.md"
keywords = ["chat", "cli", "terminal", "tcp", "realtime"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "cli-t"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }